* do not load :sys_wait_h from POSIX perl module since this seems to
  be missing in some linux distros and we can do alright without I think.

2008/6/13 -- released version 2.4.1

* fixed js packaging error ...  s/VERSION/x/ was a bad idea

2008/6/10 -- released version 2.4.0

* building a --static version of the smokeping page is broken. Make
  it a little less broken by providing a dummyCGI->script_name method.
  --tobi

* added blazemode option to FPing, so that it sends an extra ping to
  blaze a path to the destionation and then discarges it. Based on idea by
  G.W. Haywood  -- tobi

* fix for telneJunOSPing by Christian Hahn -- tobi

* fixed FPing regression created in r680 it broke the proper handling of old
  version of fping. Found by  Celedonio Miranda Torresano -- tobi

* first cut at mtr integration ... added new menuextra config item
  to build mtr links. -- tobi

* use localtime to construct the rawlog filename 
  --tobi as reported by Kent Kuriyama

* allow slave names to have . in them but not target sections. --tobi

2008/4/26 -- released version 2.3.6

* add custom style for active menu link
  -- tobi, patch by Daniel Rich drich employees.org

* honour the 'linkstyle' variable when zooming
  -- niko, reported by Wolfgang Tremmel as Debian bug #476404

* the 'ralf' fix for cgi which is not able to read the secrets file. -- tobi

* display "all the smoke" even when it gets cut at the top end of the graph
  --tobi

2008/3/29 -- released version 2.3.5

* make slaves kill their old children off before forking new ones when
  the configuration changes. Reported by David Behr. --niko

2008/3/28 -- released version 2.3.4

* fix 'loss_background' documentation. Reported by David Tomic. --niko

* fix local variable override handling in connection with nomasterpoll
  --niko

* add protocol level master/slave protocol to control upgrades --tobi

* fix ordering of menu entries again --tobi

* bail out if the master/slave shared secret file is world-readable