@@ -1000,7 +1000,7 @@ sub get_detail ($$$$;$){
     my $tree = shift;
     my $open = shift;
     my $mode = shift || $q->param('displaymode') || 's';
-
+    
     my $phys_tree = $tree;
     my $phys_open = $open;    
     if ($tree->{__tree_link}){
@@ -1547,7 +1547,11 @@ sub hierarchy_switcher($$){
 sub display_webpage($$){
     my $cfg = shift;
     my $q = shift;
-    my ($path,$slave) = split(/~/,$q->param('target') || '');
+    my $trag = '';
+    if ( $q->param('target') and $q->param('target') !~ /\.\./ and $q->param('target') =~ /(\S+)/){
+        $targ = $1;
+    }
+    my ($path,$slave) = split(/~/,$targ);
     if ($slave and $slave ~= /(\S+)/){
         die "ERROR: slave '$slave' is not defined in the '*** Slaves ***' section!\n"
             unless defined $cfg->{Slaves}{$slave};
